--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,19 @@
 </head>
 <body>
 
-<%= yield %>
+	<div class="navbar navbar-fixed-top"> <!--- fixed navbar on top -->
+		<div class='navbar-inner'>
+			<div class ='container'> <!--- navbar 3 divs -->
+				<a href='#' class='brand'>Treebook</a> <!--- Brand Treebook -->
+				<ul class ='nav'>
+					<li><%= link_to "All Statuses", statuses_path%></li>
+				</ul>
+			</div>
+		</div>
+	</div>
 
+	<div class="container"> <!--- centered -->
+		<%= yield %>
+	</div>
 </body>
 </html>
