--- a/app/assets/stylesheets/statuses.scss
+++ b/app/assets/stylesheets/statuses.scss
@@ -17,10 +17,6 @@
 	background: #FAFAFA;
 }
 
-.status .admin {
-	display: none;
-}
-
-.status .hover .admin {
-	display: inline;
+.user_nav {
+	display: block;
 }
