--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,12 @@
 	</div>
 
 	<div class="container"> <!--- centered -->
+		<p class="notice"><%= notice %></p>
+        <p class="alert"><%= alert %></p>
 		<%= yield %>
 	</div>
+
+</div>
 </body>
 </html>
+
