--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,8 +31,14 @@
 	</div>
 
 	<div class="container"> <!--- centered -->
-		<p class="notice"><%= notice %></p>
-        <p class="alert"><%= alert %></p>
+		<% flash.each do |type, message| %>
+		    <div class="alert <%= flash_class(type.to_s) %>">
+		        <button class="close" data-dismiss="alert">x</button>
+		        <%= message %>
+		    </div>
+		<% end %>
+
+
 		<%= yield %>
 	</div>
 
